--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
+    color: #f0e130;
 }
 
 form {
@@ -21,6 +22,7 @@ form {
 
 label {
     font-size: 1.2em;
+    color: #f0e130;
 }
 
 button {
@@ -28,14 +30,14 @@ button {
     padding: 10px 20px;
     margin-top: 10px;
     cursor: pointer;
-    background-color: #ff9800;
+    background-color: #0d47a1;
     color: #fff;
     border: none;
     border-radius: 5px;
 }
 
 button:hover {
-    background-color: #e68900;
+    background-color: #0b3d91;
 }
 
 #animationContainer {
@@ -43,10 +45,11 @@ button:hover {
     font-size: 1.5em;
     font-weight: bold;
     height: 50px;
+    color: #f0e130;
 }
 
 #result {
     font-size: 2em;
-    color: #ffeb3b;
+    color: #f0e130;
     margin-top: 20px;
 }
