--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,6 @@ body {
     font-size: 1.2em; /* 20% größer */
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.box {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 24px;
-    border-radius: 10px;
-    margin-top: 20px;
-    width: 80%; /* Breite der Box */
-    max-width: 600px; /* Maximale Breite der Box */
-}
-
 h1 {
     font-size: 3em; /* 20% größer */
     margin-bottom: 24px;
@@ -30,9 +15,10 @@ h1 {
 }
 
 form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 24px; /* 20% größer */
+    border-radius: 10px;
+    display: inline-block;
 }
 
 .nameOption {
@@ -41,7 +27,7 @@ form {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     border-radius: 5px;
-    margin: 5px;
+    margin: 5px 0;
 }
 
 button {
@@ -59,36 +45,6 @@ button:hover {
     background-color: #0b3d91;
 }
 
-.resetButton {
-    font-size: 1.4em; /* 20% größer */
-    padding: 8px; /* Kleiner als der Start-Button */
-    margin-top: 12px; /* 20% größer */
-    cursor: pointer;
-    background-color: #d32f2f;
-    color: #fff;
-    border: none;
-    border-radius: 50%; /* Runde Form */
-}
-
-.resetButton:hover {
-    background-color: #b71c1c;
-}
-
-.bottomButton {
-    font-size: 1.4em; /* 20% größer */
-    padding: 12px 24px; /* 20% größer */
-    margin-top: 12px; /* 20% größer */
-    cursor: pointer;
-    background-color: #0d47a1;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-}
-
-.bottomButton:hover {
-    background-color: #0b3d91;
-}
-
 #animationContainer {
     margin-top: 24px; /* 20% größer */
     font-size: 1.8em; /* 20% größer */
@@ -97,6 +53,8 @@ button:hover {
     color: #fff;
 }
 
-#buttonContainer {
+#result {
+    font-size: 2.4em; /* 20% größer */
+    color: #00ff00; /* Ergebnis in Grün */
     margin-top: 24px; /* 20% größer */
 }
